--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 <head>
 	<title>GIF API Project</title>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/gif.js"></script>
 </head>
@@ -10,6 +11,7 @@
 	<!--this div will contain all of the buttons-->
 
 	<!--this form will allow users to create a button by typing a director of their choosing-->
+	<h1>GIF API PROJECT</h1>
 	<form id="gif-form">
             <label for="director-input">Add a Director</label>
             <input type="text" id="director-input">
